--- a/html/login.html
+++ b/html/login.html
@@ -15,14 +15,11 @@
   </div>
 
   <div class="container">
-    <div id="main_box">
-      <div class="inp">
       <div id="box_id">아이디 &nbsp; <input type="text" placeholder="&nbsp;ID"></div>
       <div id="box_pw">비밀번호 &nbsp; <input type="password" placeholder="&nbsp;PassWord"></div>
       <div id="box_btn"><div id="lbtn" onclick="mainAction()">로그인</div></div>
-    </div>
+      <div id="nbox"></div>
       <div id="find_btn" onclick="findAction()">ID / PW 찾기</div>
-    </div>
   </div>
 
   <script src="../trip.js"></script>
