--- a/html/login.html
+++ b/html/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="top">
-    <div id="top_title">
+    <div id="top_title" onclick="indexAction()">
       TO. P &nbsp; 여행이 어려운 당신에게 &nbsp; FROM. J
     </div>
   </div>
