--- a/html/login.html
+++ b/html/login.html
@@ -19,7 +19,10 @@
       <div id="box_pw">비밀번호 &nbsp; <input type="password" placeholder="&nbsp;PassWord"></div>
       <div id="box_btn"><div id="lbtn" onclick="mainAction()">로그인</div></div>
       <div id="nbox"></div>
+      <div id="other_btn">
       <div id="find_btn" onclick="findAction()">ID / PW 찾기</div>
+      <div id="join_btn" onclick="joinAction()">회원가입</div>
+    </div>
   </div>
 
   <script src="../trip.js"></script>
