--- a/html/join.html
+++ b/html/join.html
@@ -8,7 +8,25 @@
   <title>회원가입 페이지</title>
 </head>
 <body>
-  
+  <div class="top">
+    <div id="top_title" onclick="indexAction()">
+      TO. P &nbsp; 여행이 어려운 당신에게 &nbsp; FROM. J
+    </div>
+  </div>
+
+  <div class="container">
+    <div id="box_name">이름 &nbsp; <input id="inp_txt" type="text" placeholder="&nbsp;Name">
+      <div id="name">이름</div></div>
+    <div id="box_id">아이디 &nbsp; <input id="inp_txt" type="text" placeholder="&nbsp;ID">
+      <div id="id_re_btn">아이디 중복 확인</div></div>
+    <div id="box_pw">비밀번호 &nbsp; <input id="inp_txt" type="password" placeholder="&nbsp;PassWord">
+      <div id="pw_re_btn">비밀번호 확인</div></div>
+    <div id="box_pw_re">비밀번호 재입력 <input id="inp_txt" type="password" placeholder="&nbsp;PassWord">
+      <div id="pw_re_btn">비밀번호 확인</div></div>
+      <div>연락처</div>
+      <div>남/여</div>
+      <div>이메일</div>
+</div>
 
   <script src="../trip.js"></script>
 </body>
