--- a/html/join.html
+++ b/html/join.html
@@ -72,7 +72,9 @@
       <input type="tel" placeholder="전화번호">
     </div>
     <!-- 가입 btn -->
-    <input type="submit" value="가입하기">
+    <div class="join">
+      <input type="submit" value="가입하기">
+    </div>
   </div> 
   
   <script src="../trip.js"></script>
