--- a/html/join.html
+++ b/html/join.html
@@ -30,6 +30,11 @@
     <b>비밀번호 재입력</b>
     <input id="userPw-Re" type="password">
   </div>
+  <!-- 닉네임 -->
+  <div class="field">
+    <b>닉네임</b>
+    <input id="userNick" type="text" placeholder="(최대 8글자)">
+  </div>
   <!-- 이름 -->
   <div class="field">
     <b>이름</b>
@@ -73,7 +78,7 @@
     </div>
     <!-- 가입 btn -->
     <div class="join">
-      <input type="submit" value="가입하기">
+      <input type="submit" value="가입하기" onclick="submitAction()">
     </div>
   </div> 
   
