--- a/html/login.html
+++ b/html/login.html
@@ -13,13 +13,16 @@
       TO. P &nbsp; 여행이 어려운 당신에게 &nbsp; FROM. J
     </div>
   </div>
-  <div class="container">
+  <div class="main">
+    <div class="container">
       <div id="box_id">아이디 &nbsp; <input type="text" placeholder="&nbsp;ID"></div>
       <div id="box_pw">비밀번호 &nbsp; <input type="password" placeholder="&nbsp;PassWord"></div>
       <div id="box_btn"><div id="lbtn" onclick="mainAction()">로그인</div></div>
       <div id="find_btn" onclick="findAction()">ID / PW 찾기</div>
       <div id="join_btn" onclick="joinAction()">회원가입</div>
   </div>
+  </div>
+  
 
   <script src="../trip.js"></script>
 </body>
